Fix BE tests