@@ -22,70 +22,70 @@ public class FriendshipCrudTest extends BackEndTest {
     @Test(groups = {"be", "community"})
     public void friendshipCrud() {
         RegistrationParameters userData = RegistrationParameters.validParameters();
-        Integer serverPort = getServerPort();
-        UUID accessTokenId = IndexPageActions.registerAndLogin(serverPort, userData);
+        int serverPort = getServerPort();
+        String accessToken = IndexPageActions.registerAndLogin(serverPort, userData);
 
         RegistrationParameters friendUserData = RegistrationParameters.validParameters();
-        UUID friendUserAccessTokenId = IndexPageActions.registerAndLogin(serverPort, friendUserData);
+        String friendUserAccessTokenId = IndexPageActions.registerAndLogin(serverPort, friendUserData);
         UUID friendUserId = DatabaseUtil.getUserIdByEmail(friendUserData.getEmail());
 
         RegistrationParameters testUserData = RegistrationParameters.validParameters();
-        UUID testUserAccessTokenId = IndexPageActions.registerAndLogin(serverPort, testUserData);
+        String testUserAccessTokenId = IndexPageActions.registerAndLogin(serverPort, testUserData);
 
-        FriendRequestResponse friendRequestResponse = FriendRequestActions.createFriendRequest(serverPort, accessTokenId, friendUserId);
+        FriendRequestResponse friendRequestResponse = FriendRequestActions.createFriendRequest(serverPort, accessToken, friendUserId);
         FriendshipResponse friendshipResponse = FriendRequestActions.acceptFriendRequest(serverPort, friendUserAccessTokenId, friendRequestResponse.getFriendRequestId());
 
-        queryBySender(accessTokenId, friendUserData, friendshipResponse);
+        queryBySender(accessToken, friendUserData, friendshipResponse);
         queryByReceiver(friendUserAccessTokenId, friendshipResponse);
-        delete_notFound(accessTokenId);
+        delete_notFound(accessToken);
         delete_forbiddenOperation(testUserAccessTokenId, friendshipResponse);
-        deleteBySender(accessTokenId, friendUserAccessTokenId, friendshipResponse);
-        deleteByReceiver(accessTokenId, friendUserAccessTokenId, friendUserId);
+        deleteBySender(accessToken, friendUserAccessTokenId, friendshipResponse);
+        deleteByReceiver(accessToken, friendUserAccessTokenId, friendUserId);
     }
 
-    private static void queryBySender(UUID accessTokenId, RegistrationParameters friendUserData, FriendshipResponse friendshipResponse) {
-        List<FriendshipResponse> friendshipsOfSender = FriendshipActions.getFriendships(getServerPort(), accessTokenId);
+    private static void queryBySender(String accessToken, RegistrationParameters friendUserData, FriendshipResponse friendshipResponse) {
+        List<FriendshipResponse> friendshipsOfSender = FriendshipActions.getFriendships(getServerPort(), accessToken);
 
         assertThat(friendshipsOfSender).hasSize(1);
-        assertThat(friendshipsOfSender.get(0).getFriendshipId()).isEqualTo(friendshipResponse.getFriendshipId());
-        assertThat(friendshipsOfSender.get(0).getUsername()).isEqualTo(friendUserData.getUsername());
-        assertThat(friendshipsOfSender.get(0).getEmail()).isEqualTo(friendUserData.getEmail());
+        assertThat(friendshipsOfSender.getFirst().getFriendshipId()).isEqualTo(friendshipResponse.getFriendshipId());
+        assertThat(friendshipsOfSender.getFirst().getUsername()).isEqualTo(friendUserData.getUsername());
+        assertThat(friendshipsOfSender.getFirst().getEmail()).isEqualTo(friendUserData.getEmail());
     }
 
-    private static void queryByReceiver(UUID friendUserAccessTokenId, FriendshipResponse friendshipResponse) {
+    private static void queryByReceiver(String friendUserAccessTokenId, FriendshipResponse friendshipResponse) {
         List<FriendshipResponse> friendshipsOfReceiver = FriendshipActions.getFriendships(getServerPort(), friendUserAccessTokenId);
 
         assertThat(friendshipsOfReceiver).containsExactly(friendshipResponse);
     }
 
-    private static void delete_notFound(UUID accessTokenId) {
-        Response delete_notFoundResponse = FriendshipActions.getDeleteFriendshipResponse(getServerPort(), accessTokenId, UUID.randomUUID());
+    private static void delete_notFound(String accessToken) {
+        Response delete_notFoundResponse = FriendshipActions.getDeleteFriendshipResponse(getServerPort(), accessToken, UUID.randomUUID());
 
         ResponseValidator.verifyErrorResponse(delete_notFoundResponse, 404, ErrorCode.DATA_NOT_FOUND);
     }
 
-    private static void delete_forbiddenOperation(UUID testUserAccessTokenId, FriendshipResponse friendshipResponse) {
+    private static void delete_forbiddenOperation(String testUserAccessTokenId, FriendshipResponse friendshipResponse) {
         Response delete_forbiddenOperationResponse = FriendshipActions.getDeleteFriendshipResponse(getServerPort(), testUserAccessTokenId, friendshipResponse.getFriendshipId());
 
         ResponseValidator.verifyForbiddenOperation(delete_forbiddenOperationResponse);
     }
 
-    private static void deleteBySender(UUID accessTokenId, UUID friendUserAccessTokenId, FriendshipResponse friendshipResponse) {
-        FriendshipActions.deleteFriendship(getServerPort(), accessTokenId, friendshipResponse.getFriendshipId());
+    private static void deleteBySender(String accessToken, String friendUserAccessTokenId, FriendshipResponse friendshipResponse) {
+        FriendshipActions.deleteFriendship(getServerPort(), accessToken, friendshipResponse.getFriendshipId());
 
-        assertThat(FriendshipActions.getFriendships(getServerPort(), accessTokenId)).isEmpty();
+        assertThat(FriendshipActions.getFriendships(getServerPort(), accessToken)).isEmpty();
         assertThat(FriendshipActions.getFriendships(getServerPort(), friendUserAccessTokenId)).isEmpty();
     }
 
-    private static void deleteByReceiver(UUID accessTokenId, UUID friendUserAccessTokenId, UUID friendUserId) {
+    private static void deleteByReceiver(String accessToken, String friendUserAccessTokenId, UUID friendUserId) {
         FriendRequestResponse friendRequestResponse;
         FriendshipResponse friendshipResponse;
-        friendRequestResponse = FriendRequestActions.createFriendRequest(getServerPort(), accessTokenId, friendUserId);
+        friendRequestResponse = FriendRequestActions.createFriendRequest(getServerPort(), accessToken, friendUserId);
         friendshipResponse = FriendRequestActions.acceptFriendRequest(getServerPort(), friendUserAccessTokenId, friendRequestResponse.getFriendRequestId());
 
         FriendshipActions.deleteFriendship(getServerPort(), friendUserAccessTokenId, friendshipResponse.getFriendshipId());
 
-        assertThat(FriendshipActions.getFriendships(getServerPort(), accessTokenId)).isEmpty();
+        assertThat(FriendshipActions.getFriendships(getServerPort(), accessToken)).isEmpty();
         assertThat(FriendshipActions.getFriendships(getServerPort(), friendUserAccessTokenId)).isEmpty();
     }
 }
